--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,1 +1,8 @@
-pod "SCPStoreKitManager/SCPStoreKitReceiptValidator", :path => "../"
+platform :ios, '9.0'
+source 'https://github.com/CocoaPods/Specs.git'
+
+use_frameworks!
+
+target 'SCPStoreKitManager' do
+pod 'SCPStoreKitManager/SCPStoreKitReceiptValidator'
+end
